Made h2 red on mobile. Let's test to make sure it's only on mobile. This way... I'll know I'm targeting the right devices.

--- a/style/sass/_500px.scss
+++ b/style/sass/_500px.scss
@@ -27,6 +27,10 @@
 		line-height: 80px;
 	}
 
+	h2{
+		background: red;
+	}
+
 	p{
 		font-size: 2.5em;
 	}
